# Kaleidoscope

./: CMakeLists.txt  Dockerfile  Interpreter.cpp  Parser.cpp  Parser.hpp  README.md  Scanner.cpp  Scanner.hpp
input/: complexFunc.ka  simpleNumber.ka  simpleVariable.ka
